<resources>
    <string name="app_name">Analytical Geometry</string>
    <string name="pair_of_lines">Pair of Lines</string>
    <string name="circle">Circle</string>
    <string name="parabola">Parabola</string>
    <string name="ellipse">Ellipse</string>
    <string name="hyperbola">Hyperbola</string>
    <string name="general">General</string>
    <string name="standard_form">Standard form</string>
    <string name="standard_form_x_hyperbola">Standard form (X-Hyperbola)</string>
    <string name="standard_form_y_hyperbola">Standard form (Y-Hyperbola)</string>
    <string name="draw">Draw</string>
    <string name="general_form">General form</string>
    <string name="ends_of_the_diameter">Ends of the diameter</string>
    <string name="homogeneous">Homogeneous</string>
    <string name="general_pair">General</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://free4egyptian.wixsite.com/andalus/analytical-geometry</string>
    <string name="update_link">https://play.google.com/store/apps/details?id=com.andalus.abo_med7at.analyticalgeometry</string>
    <string name="update_dialog_label">New update is now available</string>
    <string name="update_dialog_message">Do you want to download the latest update now?</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="update_now">Update Now</string>

    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="what_s_new">What\'s new</string>
    <string name="smoother_experience">Smoother Experience</string>
    <string name="optimized_performance">Optimized Performance</string>
    <string name="ui_improvements">Ui Improvements</string>
    <string name="next_button_bug_fixed">\"Next\" button bug fixed</string>
    <string name="get_started">Get Started</string>
</resources>
