<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content"
        tools:context="com.andalus.abo_med7at.analyticalgeometry.ui.ellipse_activity.EllipseActivity">
        <androidx.cardview.widget.CardView
            style="@style/topCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <TextView
                    style="@style/titleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard_form"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/functionLineStyle"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="x^2" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ـــــــــــ" />
                        <EditText
                            android:id="@+id/a_sqrt_s_ellipse"
                            android:layout_width="35dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="numberDecimal|numberSigned"
                            android:importantForAutofill="no" />
                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="y^2" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ـــــــــــ" />
                        <EditText
                            android:id="@+id/b_sqrt_s_ellipse"
                            android:layout_width="35dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="numberDecimal|numberSigned"
                            android:importantForAutofill="no" />
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="=1" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_draw_ellipse_standard"
                    android:theme="@style/drawButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/draw" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/bottomCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    style="@style/titleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_form"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    style="@style/functionLineStyle"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/a_ell_e_g"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal|numberSigned"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="x^2+" />

                    <EditText
                        android:id="@+id/b_ell_e_g"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal|numberSigned"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="y^2+" />
                    <EditText
                        android:id="@+id/d_ell_e_g"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal|numberSigned"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="x+" />
                    <EditText
                        android:id="@+id/e_ell_e_g"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal|numberSigned"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="y+" />
                    <EditText
                        android:id="@+id/f_ell_e_g"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal|numberSigned"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="=0" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_draw_gen_ell"
                    android:layout_margin="8dp"
                    android:layout_gravity="end"
                    android:theme="@style/drawButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/draw" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
