<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        tools:context=".ui.pair_activity.PairActivity">

        <androidx.cardview.widget.CardView
            style="@style/topCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical" />

                <TextView
                    style="@style/titleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/homogeneous" />

                <HorizontalScrollView
                    style="@style/functionLineStyle"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/a_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:inputType="numberDecimal|numberSigned"
                            android:nextFocusDown="@id/h2_edit" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="x^2+" />

                        <EditText
                            android:id="@+id/h2_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:inputType="numberDecimal|numberSigned"
                            android:nextFocusDown="@id/b_edit" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="xy+" />

                        <EditText
                            android:id="@+id/b_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:imeOptions="actionDone"
                            android:inputType="numberDecimal|numberSigned" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="y^2=0" />

                    </LinearLayout>

                </HorizontalScrollView>

                <Button
                    android:id="@+id/btn_draw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:text="@string/draw"
                    android:theme="@style/drawButtonStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/bottomCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/titleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_pair" />

                <HorizontalScrollView
                    style="@style/functionLineStyle"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/a_edit_non"
                            android:layout_width="wrap_content"
                            android:nextFocusDown="@id/h2_edit_non"
                            android:layout_height="wrap_content"

                            android:inputType="numberDecimal|numberSigned" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="x^2+" />

                        <EditText
                            android:id="@+id/h2_edit_non"
                            android:layout_width="wrap_content"
                            android:nextFocusDown="@id/b_edit_non"
                            android:layout_height="wrap_content"

                            android:inputType="numberDecimal|numberSigned" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="xy+" />

                        <EditText
                            android:id="@+id/b_edit_non"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:nextFocusDown="@id/g2_edit_non"

                            android:inputType="numberDecimal|numberSigned" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="y^2+" />

                        <EditText
                            android:id="@+id/g2_edit_non"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:nextFocusDown="@id/f2_edit_non"
                            android:inputType="numberDecimal|numberSigned" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="x+" />

                        <EditText
                            android:id="@+id/f2_edit_non"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:nextFocusDown="@id/c_edit_non"
                            android:inputType="numberDecimal|numberSigned" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="y+" />

                        <EditText
                            android:id="@+id/c_edit_non"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:imeOptions="actionDone"
                            android:inputType="numberDecimal|numberSigned" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="=0" />

                    </LinearLayout>

                </HorizontalScrollView>

                <Button
                    android:id="@+id/btn_draw2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:text="@string/draw"
                    android:theme="@style/drawButtonStyle" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
